# coderef

./: .coderef  .coderefignore  .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  TODO.md  coderef_core.py  coderef_entry.py  install.sh  pyproject.toml
.github/workflows/: coderef-check.yml  publish-vscode.yml  publish.yml
cli/: coderef
hooks/: post-checkout  post-merge  pre-commit
mcp-server/: coderef_mcp.py
tests/: test_coderef.py
vim-plugin/autoload/: coderef.vim
vim-plugin/doc/: coderef.txt
vim-plugin/lua/: coderef.lua
vim-plugin/plugin/: coderef.vim
vscode-extension/: .vscodeignore  README.md  coderef-0.1.2.vsix  coderef-0.1.3.vsix  coderef-0.1.4.vsix  coderef-0.1.5.vsix  coderef-0.1.6.vsix  coderef-0.1.7.vsix  coderef-0.1.8.vsix  coderef-0.1.9.vsix  make_icon.py  package.json  tsconfig.json
vscode-extension/src/: extension.ts
