[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "coderef"
version         = "0.1.0"
description     = "Stable UUID-based in-source code references"
requires-python = ">=3.9"
license         = { text = "MIT" }
readme          = "README.md"
keywords        = ["coderef", "uuid", "anchor", "navigation", "cross-reference"]

[project.urls]
Homepage   = "https://github.com/erncyp/coderef"
Repository = "https://github.com/erncyp/coderef"
Issues     = "https://github.com/erncyp/coderef/issues"

[project.scripts]
coderef = "coderef_core:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
py-modules = ["coderef_core", "coderef_entry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
